added search engine

--- a/404.md
+++ b/404.md
@@ -3,9 +3,7 @@ layout: sulfastor-homepage
 permalink: /404.html
 ---
 
-<h1 style="color: red;">110010100 <br> 01000110 01101001 01101100 01100101 00100000 01101110 01101111 01110100 00100000 01100110 01101111 01110101 01101110 01100100<h1>
-  <div>
-  <p>
-    <b>Human translation: What the computer wanted to say is there was a 404 error because it couldn't find the file.
-</p></div>
+<h1 style="color: red;text-align:center;">110010100 <br> 01000110 01101001 01101100 01100101 00100000 01101110 01101111 01110100 00100000 01100110 01101111 01110101 01101110 01100100<h1>
+
+<h4 style="text-align:center;">PAGE NOT FOUND</h4>
 
