Fix latest post

--- a/_posts/2025-02-08-rust.md
+++ b/_posts/2025-02-08-rust.md
@@ -3,10 +3,14 @@ layout: sulfastor-homepage
 title: Learning rust by implementing sed
 date: 2025/02/08 23:55:09
 ---
-<p>
-I decided to learn rust so I tried to write a sed replacement in sed. It's very basic but it can handle s (substituion) and y (transliteration) commands and some flags. Implementing other important flags is on my radar but no planned soon. I want to work on other rust project which includes embeddings and Raspberry Pi Pico.
-</p>
+# Learning rust by implementing sed
+I decided to learn rust so I tried to write a sed replacement in sed. 
 
-<p>
-You can find code here: https://github.com/sulfasTor/sed-rust.git
-</p>
+It's very basic but it can handle =s= (substitution) and =y= (transliteration) commands and some flags. Implementing other important flags is on my radar but no planned soon. I want to work on other rust project which includes embeddings and Raspberry Pi Pico.
+
+## Example
+```bash
+echo "foo is not bar but bar is foo" | sed-rust 's/foo/bar/g'
+```
+
+You can find code here: <https://github.com/sulfasTor/sed-rust.git>
