Fix latest post

--- a/_posts/2025-02-08-rust.md
+++ b/_posts/2025-02-08-rust.md
@@ -6,7 +6,12 @@ date: 2025/02/08 23:55:09
 # Learning rust by implementing sed
 I decided to learn rust so I tried to write a sed replacement in sed. 
 
-It's very basic but it can handle =s= (substitution) and =y= (transliteration) commands and some flags. Implementing other important flags is on my radar but no planned soon. I want to work on other rust project which includes embeddings and Raspberry Pi Pico.
+According to [wikipedia](https://en.wikipedia.org/wiki/Rust_(programming_language)):
+Rust is a general-purpose programming language emphasizing performance, type safety, and concurrency. It enforces memory safety, meaning that all references point to valid memory. It does so without a traditional garbage collector; instead, memory safety errors and data races are prevented by the "borrow checker", which tracks the object lifetime of references at compile time. 
+
+I started to look at Rust Book which is the official documentation to learn Rust.
+
+My sed implementation is very basic but it can handle `s` (substitution) and `y` (transliteration) commands and some flags. Implementing other important flags is on my radar but no planned soon. I want to work on other rust project which includes embeddings and Raspberry Pi Pico.
 
 ## Example
 ```bash
