--- a/_posts/2025-02-08-rust.md
+++ b/_posts/2025-02-08-rust.md
@@ -2,9 +2,10 @@
 layout: sulfastor-homepage
 title: Learning rust by implementing sed
 date: 2025/02/08 23:55:09
+excerpt_separator: <!--more-->
 ---
 I decided to learn rust so I tried to write a sed replacement in sed.
-
+<!--more-->
 # Learning rust by implementing sed
 
 According to [wikipedia](https://en.wikipedia.org/wiki/Rust_(programming_language)):
